--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,30 @@
     android:padding="20dp"
     android:gravity="center_horizontal">
 
-    <TextView
+    <!-- Top horizontal layout for logo and title -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Unit Converter"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="20dp"/>
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="20dp">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo"
+            android:contentDescription="Logo"
+            android:layout_marginEnd="10dp"/>
+
+        <TextView
+            android:id="@+id/appTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Unit Converter"
+            android:textSize="22sp"
+            android:textStyle="bold"/>
+    </LinearLayout>
 
     <EditText
         android:id="@+id/inputValue"
@@ -36,4 +53,22 @@
         android:textSize="18sp"
         android:layout_marginTop="20dp"/>
 
+    <!-- Powered by Doctuch -->
+    <TextView
+        android:id="@+id/poweredBy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/powered_by"
+        android:textSize="14sp"
+        android:layout_marginTop="350dp"
+        android:textColor="#888888"/>
+
+    <!-- Version -->
+    <TextView
+        android:id="@+id/version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/version"
+        android:textSize="14sp"
+        android:textColor="#9E9D9D"/>
 </LinearLayout>
